--- a/about.html
+++ b/about.html
@@ -31,15 +31,9 @@
     <section class="bio-aboutpage">
         <div>
             <h1>Learn more about me</h1>
-            <p>As a child of Lao refugees, I didn’t have a blueprint written out for me about how to navigate success in
-                the US. At first, the ambiguity and lack of direction scared me, but I took it as an invitation to
-                nurture my curiosities and freedoms.</p>
-            <p>As a software engineer, I aim to combine my technical knowledge and diverse experiences–– customer service working with people
-                and databases; academic training in the sciences and humanities honing my critical thinking and
-                diligence; project management experience developing and leading a culturally relevant digital equity
-                program for immigrants and refugees–– to make technologies that serve, not only the average user, but
-                those who are socially and economically marginalized from meaningfully participating in both the digital
-                and material world. </p>
+            <p>As the child of Lao refugees, I wasn’t given a blueprint on how to navigate success in the US. Although the ambiguity scared me, I took it as an invitation to nurture my curiosities and freedoms.</p>
+            <p>In my previous role, I developed a successful digital equity program for immigrants and refugees. I quickly learned that elders want to learn technology, but the existing programs weren’t built with them in mind. I was enamored by the idea that I can leave a bigger impact by learning how to make effective and inclusive websites.</p> <p>My background in social work and liberal arts informs my software engineering approach: thinking carefully, writing clean syntax, communicating effectively, and putting people first. My goal is to create inclusive technologies that empower socially and economically marginalized individuals to meaningfully participate in the digital and material world.</p>
+            </p>
             <p><span class="bold">Email:</span> cassandramanotham@gmail.com</p>
             <a href="mailto:cassandramanotham@gmail.com"><button>Let's Work Together</button></a>
         </div>
