--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@
                         and refugees. Now, she aims to create websites and programs with all users in mind.</p>
                         <a href="mailto:cassandramanotham@gmail.com"><button class="home-btn">Let's Work
                             Together</button></a>
-                    <a href="https://github.com/codedbycass" target="_blank">
-                        <img src="Images/Icons/github.png" alt="image icon to Cassandra's github">
+                    <a href="https://github.com/codedbycass" target="_blank" class="pageLink">GitHub
+                        <!-- <img src="Images/Icons/github.png" alt="image icon to Cassandra's github"> -->
                     </a>
-                    <a href="https://www.linkedin.com/in/cassandramanotham/" target="_blank">
-                        <img src="images/Icons/linkedin.png" alt="image icon to Cassandra's Linked In">
+                    <a href="https://www.linkedin.com/in/cassandramanotham/" target="_blank" class="pageLink">LinkedIn
+                        <!-- <img src="images/Icons/linkedin.png" alt="image icon to Cassandra's Linked In"> -->
                     </a>
                         <img src="images/Cass.png" class="me">
                 </div>
                 <div class="about-row-2">
                     <p><span class="bold">Open to:</span> freelance projects & software engineering roles</p>
                     <p><span class="bold">Skills:</span> HTML5, CSS, JavaScript, MongoDB, React.js, Node.js</p>
-                    <p><span class="bold">Services:</span> Web development, copy, & graphic design</p>
+                    <p><span class="bold">Services:</span> Web development, wed design, & copy</p>
                 </div>
             </div>
         </div>
