--- a/projects.html
+++ b/projects.html
@@ -45,56 +45,56 @@
             </div> -->
             <div class="parent">
                 <div class="actualProjects">
+                    <img src="images/gowiththeflow.gif" alt="a gif preview of an app I made called Go With the Flow" class="portfolio-imgs">
+                </div>
+                <div class="projectText">
+                    <h2><a href="https://github.com/codedbycass/Go-with-the-Flow">Go With the Flow (2023)</a></h2>
+                    <p>Go with the Flow is a comprehensive full-stack application that serves as a versatile tool for tracking menstrual cycles and overall sexual health and wellness to be used on and off the cycle. Users initiate entries by entering the date and selecting their period status. By logging daily and gathering scientific data on themselves, users gain insights into their behaviors and patterns throughout their cycles. This app prioritizes security, requiring user login to safeguard sensitive health information. Data is not shared with anyone.</p>
+                    <h3>Technologies: Node.js, JavaScript, EJS, Bootstrap CSS</h3>
+                    <p class="projects-btn"><a href="https://github.com/codedbycass/Go-with-the-Flow">View on Github</a></p>
+                </div>
+            </div>
+            <div class="parent">
+                <div class="actualProjects">
+                    <img src="images/moviesandmore.gif" alt="a gif preview a website I created called movies and more" class="portfolio-imgs">
+                </div>
+                <div class="projectText">
+                    <h2><a href="https://codedbycass.github.io/Movies-and-More/">Movies and More (2023)</a></h2>
+                    <p>This dynamic app enables users to input a movie title, offering detailed information about the film, as well as additional insights into the director. This app caters to more than just movie enthusiasts; it appeals to those interested in ratings, box office results, and the latest updates on the director.</p>
+                    <h3>Technologies: API's, JavaScript, HTML, CSS</h3>
+                    <p class="projects-btn"><a href="https://github.com/codedbycass/Movies-and-More/tree/answer">View on Github</a></p>
+                </div>
+            </div>
+            <div class="parent">
+                <div class="actualProjects">
+                    <img src="images/programmerquotes.gif" alt="a gif preview of a website I created called programmer quotes" class="portfolio-imgs">
+                </div>
+                <div class="projectText">
+                    <h2><a href="https://codedbycass.github.io/Programming-Quotes/">Programmer Quotes (2023)</a></h2>
+                    <p>This simple project makes a request to an external server using an API. Thanks to the API, I coded minimally. This site is recommend for any engineers stuck on a bug or the average person in need of inspiration!</p>
+                    <h3>Technologies: API's, Javascript, HTML, CSS</h3>
+                    <p class="projects-btn"><a href="https://github.com/codedbycass/JWLI-Mockup">View on Github</a></p>
+                </div>
+            </div>
+            <div class="parent">
+                <div class="actualProjects">
+                    <img src="images/poems.gif" alt="a gif preview of a website I created called poems" class="portfolio-imgs">
+                </div>
+                <div class="projectText">
+                    <h2><a href="https://codedbycass.github.io/Get-Poems/">Poem Generator (2023)</a></h2>
+                    <p>This project makes a request to an external server using a poem API. It's purpose is to generate a poem based on a key word!                    </p>
+                    <h3>Technologies: API's, Javascript, HTML, CSS</h3>
+                    <p class="projects-btn"><a href="https://github.com/codedbycass/Get-Poems/tree/answer">View on Github</a></p>
+                </div>
+            </div>
+            <div class="parent">
+                <div class="actualProjects">
                     <img src="images/Fishadelphia.gif" alt="a gif of the Fishadelphia landing page" class="portfolio-imgs">
                 </div>
                 <div class="projectText">
                     <h2><a href="https://fishadelphia.com/">Fishadelphia (2021)</a></h2>
                     <p>Fishadelphia connects seafood harvesters with Philadelphians through a seafood subscription program, community events, and youth programming for high school students to support both the seafood industry and local residents.</p>
                     <h3>UX/UI, Graphic Design, Illustration</h3>
-                </div>
-            </div>
-            <div class="parent">
-                <div class="actualProjects">
-                    <img src="images/astrologyagain.gif" alt="a gif of the astrology landing page" class="portfolio-imgs">
-                </div>
-                <div class="projectText">
-                    <h2><a href="https://astrologycodedbycass.com/">What's your sign? (2023)</a></h2>
-                    <p>This quick project showcases the simple and sophisticated uses of CSS and JavaScript. With a single event listener, users can generate their astrological sign and learn some interesting insights.</p>
-                    <h3>HTML, CSS, JavaScript, Copy</h3>
-                    <p class="projects-btn"><a href="https://github.com/codedbycass/Astrology">View on Github</a></p>
-                </div>
-            </div>
-            <div class="parent">
-                <div class="actualProjects">
-                    <img src="images/jwlimockup.gif" alt="a gif of the JWLI landing page" class="portfolio-imgs">
-                </div>
-                <div class="projectText">
-                    <h2><a href="https://jwlicodedbycass.com/">JWLI Mockup (2023)</a></h2>
-                    <p>From a wireframe, I recreated the JWLI landing page using HTML and CSS.  I used media queries at several different breakpoints to make it responsive.</p>
-                    <h3>HTML, CSS</h3>
-                    <p class="projects-btn"><a href="https://github.com/codedbycass/JWLI-Mockup">View on Github</a></p>
-                </div>
-            </div>
-            <div class="parent">
-                <div class="actualProjects">
-                    <img src="images/academic.gif" alt="a gif of an academic portfolio page" class="portfolio-imgs">
-                </div>
-                <div class="projectText">
-                    <h2><a href="https://academicportfoliocodedbycass.netlify.app/">Academic Portfolio (2023)</a></h2>
-                    <p>A simple academic portfolio for a grad student that includes a button for a click glance at their CV, their publications, and a form to get in touch.</p>
-                    <h3>HTML, CSS</h3>
-                    <p class="projects-btn"><a href="https://github.com/codedbycass/Academic-Portfolio">View on Github</a></p>
-                </div>
-            </div>
-            <div class="parent">
-                <div class="actualProjects">
-                    <img src="images/levelground.gif" alt="a gif of the Level Ground page" class="portfolio-imgs">
-                </div>
-                <div class="projectText">
-                    <h2><a href="https://github.com/codedbycass/LevelGround-Mockup">Level Ground Mockup (2023)</a></h2>
-                    <p>A simple academic portfolio for a grad student that includes a button for a click glance at their CV, their publications, and a form to get in touch.</p>
-                    <h3>HTML, CSS</h3>
-                    <p class="projects-btn"><a href="https://github.com/codedbycass/LevelGround-Mockup">View on Github</a></p>
                 </div>
             </div>
     </div>
